# capns-interop-tests

./: .gitignore  CAP_SPEC.md  Makefile  README.md  pyproject.toml  pyproject.toml.wstemplate  requirements.txt  show_throughput_matrix.py  test.sh  test_rust_stack.sh  version.txt
src/capns_interop/: __init__.py
src/capns_interop/framework/: __init__.py  bidirectional_host.py  cli_mode.py  frame_test_helper.py  host_process.py  matrix_orchestrator.py  orchestrator.py  process_manager.py  relay_host_server.py  relay_switch_helper.py  remote_host.py  router_process.py  test_topology.py
src/capns_interop/hosts/go/: go.mod  main.go
src/capns_interop/hosts/go-relay/: go.mod  main.go
src/capns_interop/hosts/python/: host.py  relay_host.py
src/capns_interop/hosts/rust/: Cargo.toml
src/capns_interop/hosts/rust-relay/: Cargo.toml
src/capns_interop/hosts/rust-relay/src/: main.rs
src/capns_interop/hosts/rust/src/: main.rs
src/capns_interop/hosts/swift/: Package.swift
src/capns_interop/hosts/swift-relay/: Package.swift
src/capns_interop/hosts/swift-relay/Sources/: main.swift
src/capns_interop/hosts/swift/Sources/: main.swift
src/capns_interop/plugins/go/: go.mod  main.go
src/capns_interop/plugins/python/: plugin.py
src/capns_interop/plugins/rust/: Cargo.toml
src/capns_interop/plugins/rust/src/: main.rs
src/capns_interop/plugins/swift/: Package.resolved  Package.swift  debug_manifest.swift  test_manifest.swift
src/capns_interop/plugins/swift/Sources/: main.swift
src/capns_interop/routers/rust/: Cargo.toml
src/capns_interop/routers/rust/src/: main.rs
src/capns_interop/routers/swift/: Package.swift
src/capns_interop/routers/swift/Sources/: main.swift
src/capns_interop/scenarios/: __init__.py  basic.py  bidirectional.py  chunking.py  error_handling.py  heartbeat.py  performance.py  stream_multiplexing.py  streaming.py
tests/: __init__.py  conftest.py  test_basic_interop.py  test_bidirectional_interop.py  test_chunking_interop.py  test_error_interop.py  test_filepath_interop.py  test_heartbeat_interop.py  test_host_matrix.py  test_manifest_validation.py  test_multi_host_interop.py  test_multi_master_routing.py  test_performance.py  test_plugin_repo_interop.py  test_protocol_v2_frames.py  test_relay_interop.py  test_stream_multiplexing_interop.py  test_streaming_interop.py  test_throughput_matrix.py
