[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capns-interop-tests"
version = "0.74.27211"
description = "Interoperability testing framework for capns implementations"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "capns>=0.72.29680",
    "tagged-urn>=0.9.2634",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
