[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capns-interop-tests"
version = "0.80.27916"
description = "Interoperability testing framework for capns implementations"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "capns>=0.74.29856",
    "tagged-urn>=0.10.2952",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
