[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capns-interop-tests"
version = "0.87.30217"
description = "Interoperability testing framework for capns implementations"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "capns>=0.79.31424",
    "tagged-urn>=0.12.2986",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
