[package]
name = "capns-interop-host-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "capns-interop-host-rust"
path = "src/main.rs"

[dependencies]
capns = { path = "../../../../../capns" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
base64 = "0.22"
crossbeam-channel = "0.5"
ciborium = "0.2"
